# Rustbot

./: .gitignore  CLAUDE.md  Cargo.toml  README.de.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  openlark长连接机器人实现.txt  rust-feishu.md
.claude/: settings.local.json
crates/nanobot-api/: Cargo.toml
crates/nanobot-api/src/: auth.rs  lib.rs  server.rs
crates/nanobot-api/src/routes/: chat.rs  mod.rs  models.rs
crates/nanobot-bus/: Cargo.toml
crates/nanobot-bus/src/: events.rs  lib.rs  queue.rs
crates/nanobot-channels/: Cargo.toml
crates/nanobot-channels/src/: auth.rs  base.rs  discord.rs  feishu.rs  lib.rs  manager.rs  qq.rs  registry.rs  telegram.rs
crates/nanobot-cli/: Cargo.toml
crates/nanobot-cli/src/: main.rs  stream.rs
crates/nanobot-cli/src/commands/: agent.rs  api.rs  channels.rs  cron.rs  gateway.rs  mcp.rs  mod.rs  onboard.rs  provider.rs  services.rs  status.rs
crates/nanobot-config/: Cargo.toml
crates/nanobot-config/src/: lib.rs  loader.rs  paths.rs  schema.rs
crates/nanobot-core/: Cargo.toml
crates/nanobot-core/src/: agent.rs  context.rs  hooks.rs  lib.rs  memory.rs  session.rs  skills.rs  subagent.rs  tools.rs
crates/nanobot-core/src/mcp/: client.rs  mod.rs  protocol.rs  tools.rs  transport.rs
crates/nanobot-core/src/services/: cron.rs  heartbeat.rs  integration.rs  mod.rs
crates/nanobot-core/src/skills/: loader.rs
crates/nanobot-core/src/tools/: fs.rs  shell.rs  web.rs
crates/nanobot-core/tests/: mcp_integration_test.rs
crates/nanobot-providers/: Cargo.toml
crates/nanobot-providers/src/: base.rs  error.rs  lib.rs  openai_compat.rs  registry.rs
docs/: ARCHITECTURE.md  FEISHU_CHANNEL.md  OLLAMA_CONFIG.md  PHASE2_COMPLETE.md  PHASE2_FIXES.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE_1_6_COMPLETE.md  QQ_CHANNEL.md  RUNNABLE_VERSION.md
patch/open-lark-0.14.0/src/service/im/v1/: p2_im_message_receive_v1.rs
