[workspace]
resolver = "2"
members = [
    "crates/nanobot-config",
    "crates/nanobot-providers",
    "crates/nanobot-bus",
    "crates/nanobot-core",
    "crates/nanobot-cli",
    "crates/nanobot-channels",
    "crates/nanobot-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["nanobot contributors"]
repository = "https://github.com/HKUDS/nanobot"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

# Config
dirs = "5.0"
dotenvy = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
futures = "0.3"
parking_lot = "0.12"
tokio-stream = "0.1"

# Internal crates
nanobot-config = { path = "crates/nanobot-config" }
nanobot-providers = { path = "crates/nanobot-providers" }
nanobot-bus = { path = "crates/nanobot-bus" }
nanobot-core = { path = "crates/nanobot-core" }
nanobot-channels = { path = "crates/nanobot-channels" }
nanobot-api = { path = "crates/nanobot-api" }

# Patch for open-lark SDK - fix nullable user_id field in Feishu event deserialization
# The SDK expects String but Feishu API returns null for user_id in some cases
[patch.crates-io]
open-lark = { path = "C:/Users/gongm/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-e791a3f93f26854f/open-lark-0.14.0" }
