[package]
name = "nanobot-api"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "OpenAI-compatible API server for RustBot"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }

# Internal crates
nanobot-bus = { workspace = true }
nanobot-config = { workspace = true }
nanobot-core = { workspace = true }
nanobot-providers = { workspace = true }
