[package]
name = "nanobot-bus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Message bus for RustBot"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
parking_lot.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
thiserror.workspace = true
