[package]
name = "nanobot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for RustBot"

[[bin]]
name = "rustbot"
path = "src/main.rs"

[dependencies]
nanobot-config.workspace = true
nanobot-providers.workspace = true
nanobot-bus.workspace = true
nanobot-core.workspace = true
nanobot-channels.workspace = true
nanobot-api.workspace = true

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log = "0.2"
dirs.workspace = true
chrono.workspace = true
cron = "0.12"
