[package]
name = "nanobot-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Configuration system for RustBot"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
parking_lot.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3.0"
