[package]
name = "nanobot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core agent engine for RustBot"

[dependencies]
nanobot-config.workspace = true
nanobot-providers.workspace = true
nanobot-bus.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
parking_lot.workspace = true
chrono.workspace = true
dirs.workspace = true
urlencoding = "2.1"
reqwest.workspace = true
tiktoken-rs = "0.6"
cron = "0.12"

[dev-dependencies]
tempfile = "3"
