[package]
name = "nanobot-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM provider implementations for RustBot"

[dependencies]
nanobot-config.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
